--- a/src/app/_components/flights-components/flight-one-way/flight-one-way.component.html
+++ b/src/app/_components/flights-components/flight-one-way/flight-one-way.component.html
@@ -17,8 +17,9 @@
     </div>
 
     <div class="form-group  col-md-3 padding-rl5">
-        <input class="form-control"  placeholder="{{ 'FlightOneWay.AdultEconomy' | translate }}"
-          placement="bottom" [popover]="popTemplate" [outsideClick]="true">
+        <input type="text" [(ngModel)]="flightService.oneWayModel.Adult" class="form-control" 
+          placeholder="{{ 'FlightOneWay.AdultEconomy' | translate }}"
+          placement="bottom"  [popover]="popTemplate" [outsideClick]="true">
         <ng-template #popTemplate>
           <div class="form-group">
             <label>{{ 'FlightOneWay.Adult' | translate }}</label>
